# masterjet

./: .dockerignore  .gitignore  README.md  docker-compose.yaml  manage.py  newlrelic.ini  pyproject.toml  requirements.txt
celeryconf/: celery.py
core/: models.py  urls.py
core/graphql/: schema.py
core/migrations/: 0001_initial.py  0002_alter_usermodel_jwt_auth_token.py  0003_pluginmanager_alter_usermodel_jwt_auth_token.py  0004_alter_usermodel_jwt_auth_token.py
core/plugins/: PluginManager.py
core/user/: User.py  manager.py  query.py  utils.py
docker/backend_worker/: Dockerfile
docker/celery/: Dockerfile
docker/rabbitmq/: Dockerfile
masterjet/: asgi.py  settings.py  urls.py  wsgi.py
