[tool.poetry]
name = "masterjet"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
Django = "4.2"
newrelic = "^10.2.0"
celery = "^5.4.0"
django-celery-beat = "^2.7.0"
graphene-django = "^3.2.2"


[tool.poetry.group.dev.dependencies]
python-dotenv = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
