[project]
name = "masterjet"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "celery>=5.4.0",
    "dj-database-url>=2.3.0",
    "django==4.2",
    "django-celery-beat>=2.7.0",
    "django-filter>=24.3",
    "graphene-django>=3.2.2",
    "newrelic>=10.4.0",
    "psycopg2-binary>=2.9.10",
]

[dependency-groups]
dev = [
    "python-dotenv>=1.0.1",
]
